<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <!-- Name -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edit_text_margin_create_customer"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_create_customer_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_customer_name" />

        </android.support.design.widget.TextInputLayout>
        <!-- End Name -->


        <!-- SurName -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edit_text_margin_create_customer"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_create_customer_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_customer_surname" />

        </android.support.design.widget.TextInputLayout>
        <!-- End SurName -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_customer_phoneList"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_create_customer">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_create_customer_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_customer_phone_number" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_customer_coordinates_location"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/edit_text_margin_create_customer">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_create_customer_coordinates_location_x"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_customer_coordinates_location_x" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/edit_text_margin_create_customer">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_create_customer_coordinates_location_y"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_customer_coordinates_location_y" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/activity_create_customer_button_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_create_customer"
            style="@style/Widget.AppCompat.Button.Colored"
            />

    </LinearLayout>


</LinearLayout>
